[GTK] Epiphany searching for plugins even if plugins are disabled https://bugs.webkit.org/show_bug.cgi?id=194352

Reviewed by Michael Catanzaro.

Check pluginsEnabled setting before trying to get plugins from UI process.

* WebProcess/Plugins/WebPluginInfoProvider.cpp:
(WebKit::WebPluginInfoProvider::populatePluginCache):

Canonical link: https://commits.webkit.org/209298@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@241933 268f45cc-cd09-0410-ab3c-d52691b4dbfc